@@ -23,7 +23,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'module' => 'cm1,cm2,mod1,mod2',
 	'state' => 'beta',
 	'uploadfolder' => 1,
-	'createDirs' => 'uploads/tx_l10nmgr/settings,uploads/tx_l10nmgr/saved_files,uploads/tx_l10nmgr/jobs',
+	'createDirs' => 'uploads/tx_l10nmgr/settings,uploads/tx_l10nmgr/saved_files,uploads/tx_l10nmgr/jobs,uploads/tx_l10nmgr/jobs/out,uploads/tx_l10nmgr/jobs/in,uploads/tx_l10nmgr/jobs/done',
 	'modify_tables' => '',
 	'clearcacheonload' => 0,
 	'lockType' => '',
